lab1/Test/L1-A-3-60.output
Error Type A at Line 1
Error Type A at Line 3
Error Type A at Line 7
Error Type A at Line 10
Error Type B at Line 13
Error Type B at Line 14
Error Type B at Line 14
Error Type B at Line 14
