lab1/Test/L1-A-3-60.cmm
struct #m6TbnMxuEFOSvq04dy {
  struct e {
  }Y5yg1kuq1OjKYHLkkzn [ 1466396595 ] \= ! ! cxN0fZfQc4hL 
    = v5 ;
  struct nrLn0CLUr0iv2mT RC7gIc3Eq [ 1713044780 ] 
    [ 1917557967 ] , zh_8ouWMG8B4bK1x50 = Dl9wv95HqYQt7VTCQ 
    %, F ;
};
float qfkeAG7 
;`
struct BCc4G7A5rQzBp3zJtkc tMF8uBYErerv9Zs5 [ 1075348660 
  ] 
struct ;
int == < 